@@ -1,0 +1,2 @@
+BEGIN {
+	n = 5
