@@ -1,5 +1,5 @@
 gawk: unterm.awk:1: BEGIN{x=".........................................................................................................................................................................................................................................................}
 gawk: unterm.awk:1:         ^ unterminated string
-gawk: unterm.awk:1: BEGIN{x=".........................................................................................................................................................................................................................................................}
-gawk: unterm.awk:1:         ^ syntax error
+gawk: unterm.awk:1: (END OF FILE)
+gawk: unterm.awk:1:         ^ source files / command-line arguments must contain complete functions or rules
 EXIT CODE: 1
