@@ -1,3 +1,9 @@
+2017-07-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (eofsrc1): New test.
+	* eofsrc1a.awk, eofsrc1b.awk, eofsrc1.ok: New files.
+	* unterm.ok: Updated after code change.
+
 2017-07-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (nsprof2): New test.
